After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710117 - Wrong icon used in notifications
Wrong icon used in notifications
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-10-14 16:15 UTC by Allan Day
Modified: 2013-10-14 17:07 UTC
See Also:
GNOME target: ---
GNOME version: 3.11/3.12


Attachments
screenshot (57.43 KB, image/png)
2013-10-14 16:15 UTC, Allan Day
Details

Description Allan Day 2013-10-14 16:15:36 UTC
Created attachment 257276 [details]
screenshot

See the attached screenshot. It looks package-y - it should be the Software icon there.
Comment 1 Richard Hughes 2013-10-14 17:07:08 UTC
commit 9b40849017063d6b6db101205a13822088aa1541
Author: Richard Hughes <richard@hughsie.com>
Date:   Mon Oct 14 18:06:45 2013 +0100

    Do not use the package icon when referring to software
    
    Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=710117