Do not use the package icon when referring to software

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=710117